--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,36 +1,84 @@
 {
-    "/js/modules/access.min.js": "/js/modules/access.min.js",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js",
-    "/css/styles-admin.min.css": "/css/styles-admin.min.css",
-    "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js",
-    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js",
-    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js",
-    "/js/modules/manifest.js": "/js/modules/manifest.js",
-    "/js/modules/module.min.js": "/js/modules/module.min.js",
-    "/js/modules/page.min.js": "/js/modules/page.min.js",
-    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js",
-    "/js/modules/products.min.js": "/js/modules/products.min.js",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js",
-    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js",
-    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js",
-    "/js/modules/role.min.js": "/js/modules/role.min.js",
-    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js",
-    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js",
-    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js",
-    "/js/modules/tool.min.js": "/js/modules/tool.min.js",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js",
-    "/js/modules/user.min.js": "/js/modules/user.min.js",
-    "/js/modules/vendor.js": "/js/modules/vendor.js",
-    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js"
+    "/js/modules/manifest.js": "/js/modules/manifest.js?id=d91051ea7d0c9bd1981e",
+    "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=bb3cff1e383b86da59bd",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=81225574f2bacfe97595",
+    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=5f5c25e97c640fb3bb55",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=ea29057ff1702ba5a4fb",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=0a24085cff539fcbbb7a",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=80c698bdb53192630593",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=f3c26474bc14c34f2a8e",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=2c2a1403354469c239ad",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=7c46e0a480e9c3619099",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=5f6726b16f4ae8293ce5",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=ecb0c14692b74ca58eea",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=705643d9b2ed198d319f",
+    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=a17b903ed1703fe5912c",
+    "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=5a70a3d903f4ddb25b39",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=161b75692a4b90068d61",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=1947782a08c05f89f86d",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=238745645c234e64b294",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=3ed2cd0fbe6037822b09",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=26a4159c71fdb2cdbf07",
+    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js?id=6ce4e5d064233ed89fcd",
+    "/js/modules/input-order.min.js.map": "/js/modules/input-order.min.js.map?id=3117e2d4add90040444f",
+    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js?id=ce510e50b797b59031c3",
+    "/js/modules/list-materials.min.js.map": "/js/modules/list-materials.min.js.map?id=51c27c356c8be65e441f",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=d9b4ab7483a8860400be",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=e0d8e143bb765e45d7d2",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=dea23a7bf86211573c76",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=6844af8f342fa4695b36",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=a94b4cfb4bb8f2ff0472",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=6683bebdd4508bacd6f2",
+    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=b499962dbb728fb83ba2",
+    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=367f256de812c7df9e45",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=ad82c647ab5d5ca4a18f",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=32d4d37f078dbaf08fea",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=45668c0f8b51cda4d141",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=77e8994f68cf84be023f",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=d5b1af95e0075cd95d20",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=5ee4ce3a8d1f7c191aec",
+    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=86211050a9d15b1e3cee",
+    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=17eafa86babdf3e814d0",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=d162d3d8c518897f92dc",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=58c332f064cd62176716",
+    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=7ca38c3ca24217ce8fcf",
+    "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=7de2049a043367a7d5e7",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=2bedac3c861186a4ef23",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=416dde2ba3b41e6ecd4a",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=2428509835dcf1e6899a",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=5dd8bb0bdd99d14e596b",
+    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js?id=5ac0c3a3d2289cedb1df",
+    "/js/modules/sales-quotation.min.js.map": "/js/modules/sales-quotation.min.js.map?id=3d66dfde66f470e88bef",
+    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=377192b9774bc87e9be2",
+    "/js/modules/sales_quote.min.js.map": "/js/modules/sales_quote.min.js.map?id=b54ed1289ac4c9a9aa53",
+    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=2f780736c17bbea184a7",
+    "/js/modules/services_request.min.js.map": "/js/modules/services_request.min.js.map?id=f60396a20c6309f1b3ff",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=7d9367b404632c606077",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=800cb076eaf4462a7734",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=e1677bf9d20616659444",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=9143b365c80d2f901181",
+    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=312008b1b374bf8d6110",
+    "/js/modules/tool.min.js.map": "/js/modules/tool.min.js.map?id=c67bdc91a09ffed2ee28",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=0bed4e0216e8f6ce2452",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=d5cb812b929749f67cc6",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=a87e7391a41a22fa034f",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=edcd4edd217c6168c9bb",
+    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=be1b1c73493fda8fad8a",
+    "/js/modules/vuex.min.js.map": "/js/modules/vuex.min.js.map?id=e5022481d18d7c0b0dd7",
+    "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
+    "/js/main-v1.min.js": "/js/main-v1.min.js?id=e5793dcf7ca833a343f3",
+    "/images/logo.png": "/images/logo.png?id=e140dca63402836e3f75",
+    "/images/cover-page-default.jpg": "/images/cover-page-default.jpg?id=c761bbbfff71b78863e9",
+    "/images/user-default.jpg": "/images/user-default.jpg?id=9396d9f41a14604bf42e",
+    "/images/project-4.jpg": "/images/project-4.jpg?id=88e13cc250031548daea",
+    "/images/favicon.ico": "/images/favicon.ico?id=6ab725445cde24dfb6b3",
+    "/images/not-image-product.png": "/images/not-image-product.png?id=d2c815eceb07f0817879",
+    "/images/placeholder-upload.png": "/images/placeholder-upload.png?id=b523b736304894e7e604",
+    "/images/marca_agua.png": "/images/marca_agua.png?id=fd8985ea51a945b80b60",
+    "/images/logo-dark.png": "/images/logo-dark.png?id=42ee7569b3d206113fae",
+    "/images/logo-light.png": "/images/logo-light.png?id=ce7cdebee6ba4af625e6",
+    "/images/generic.png": "/images/generic.png?id=884901f06470a43c6774",
+    "/images/login-carpinteria.jpg": "/images/login-carpinteria.jpg?id=9d0d174782956e8cdd76",
+    "/images/login-carpinteria-second.jpg": "/images/login-carpinteria-second.jpg?id=23dd863ee026ff7c9a87",
+    "/js/login-colaborator.min.js": "/js/login-colaborator.min.js?id=ff28e8e85e8d0cbe6f7c"
 }
